--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ margin-right: 8%;">
 
                 <img style="margin-left:-30px;" src="./images/corte.gif" width="30" height="30" />
 
-                <img src="http://www.paris.cl/emails/ticket_title.jpg" width="284" height="73" />
+                <img src="./images/ticket_title.jpg" width="284" height="73" />
 
                 <p style="height: 27px;
 display: block;
